Ability to load local content (images and videos) is working
We can now load local images and videos to the application. And they can be displayed in the UI. Next steps would be to hook up a back-end image proccessing script that does a simple transformation of the image, and then resurns the result + statistics.

--- a/Styles/welcome.css
+++ b/Styles/welcome.css
@@ -1,4 +1,4 @@
 body {
-    background-image: url("../Resources/welcome.jpg");
+    background-image: url("../Resources/BioSegment.jpg");
     background-color: #cccccc;
 }
