Updates the UI CSS, Added Video Player, and Integrated Backend Executables

--- a/Styles/welcome.css
+++ b/Styles/welcome.css
@@ -1,4 +1,4 @@
 body {
-    background-image: url("../Resources/BioSegment.jpg");
+    background-image: url("../Dependencies/img/bg-pattern.jpg");
     background-color: #cccccc;
 }
