--- a/Views/welcome.html
+++ b/Views/welcome.html
@@ -39,13 +39,13 @@
         <div class="collapse navbar-collapse" id="navbarResponsive">
             <ul class="navbar-nav ml-auto">
                 <li class="nav-item">
-                    <a class="nav-link js-scroll-trigger" href="#download">About</a>
+                    <a class="nav-link js-scroll-trigger" href="https://github.com/Larnx">About</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link js-scroll-trigger" href="#features">Documentation</a>
+                    <a class="nav-link js-scroll-trigger" href="https://github.com/Larnx/Larnx_Back_End">Documentation</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link js-scroll-trigger" href="#contact">Github</a>
+                    <a class="nav-link js-scroll-trigger" href="https://github.com/Larnx">Github</a>
                 </li>
             </ul>
         </div>
@@ -58,7 +58,8 @@
             <div class="col-lg-7 my-auto">
                 <div class="header-content mx-auto">
                     <h1 class="mb-5">Larnx is a image processing tool that provides a objective, quantitative, and reproducible assessment of dysphagia severity.</h1>
-                    <a onclick="render_index()" class="btn btn-outline btn-xl js-scroll-trigger">BEGIN</a>
+                    <a onclick="render_index()" class="btn btn-outline btn-xl js-scroll-trigger">BEGIN 2D</a>
+                    <a onclick="render_index()" class="btn btn-outline btn-xl js-scroll-trigger">BEGIN 3D</a>
                 </div>
             </div>
             <div class="col-lg-5 my-auto">
